# signing-conversion

./: .gitignore  README.md  pyproject.toml
best_model/: softvc_f0_best.pt
configs/dataset/: m4singer.yaml
configs/inference/: softvc_f0.yaml
configs/prepare/: manifest.yaml
configs/train/: softvc_f0.yaml
recipes/: prepare_m4singer_data.sh  train_softvc_f0.sh
scripts/: build_manifest.py  prepare_m4singer_dataset.py
src/data/: manifest.py
src/svc/cli/: cache.py  convert.py  evaluate.py  prepare.py  train.py
src/svc/data/: audio.py  dataset.py  feature_store.py  manifest.py  preprocess.py  slicing.py  speaker_map.py
src/svc/evaluation/: __init__.py  checkpoint.py  metrics.py
src/svc/features/: alignment.py  mel.py  volume.py
src/svc/features/content/: __init__.py  base.py  hubert_soft.py
src/svc/features/pitch/: __init__.py  base.py  pyin.py  rmvpe.py
src/svc/inference/: batch_convert.py  convert.py  pipeline.py  postprocess.py
src/svc/models/: factory.py
src/svc/models/acoustic/: __init__.py  conditioning.py  decoder.py  encoder.py  softvc_f0.py
src/svc/models/modules/: __init__.py  embeddings.py  norm.py  prenet.py
src/svc/models/vocoders/: __init__.py  base.py  hifigan.py
src/svc/training/: checkpoint.py  losses.py  optimizer.py  trainer.py  wandb.py
src/svc/utils/: config.py  device.py  logging.py  runtime.py  seed.py
